@@ -87,14 +87,17 @@ INSTL_SITE_CONF_DESC="Enter your email address. This will be the email address o
 INSTL_SITE_LOAD_SAMPLE_TITLE="Load sample data"
 INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Important!</strong>: It is strongly recommended that new Joomla! users install the default sample data. To do this click on the button <i>before</i> moving to the next stage."
 INSTL_SITE_LOAD_SAMPLE_DESC2="Before leaving the installation, you can populate the site database with data. There are three ways to do this:"
-INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1. Default sample data</strong> can be inserted. To do this click the Install Sample Data button."
-INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>2a. A Joomla! 1.6.x compatible SQL script file</strong> can be uploaded from a localhost and executed on the site. This could be for installing localised sample data or restoring a Joomla! 1.5.x backup. The script should have the correct table prefixes, be in UTF-8 encoding and comply with the Joomla! 1.5.x database schema."
-INSTL_SITE_LOAD_SAMPLE_DESC5="<strong>2b. Migrate content from previous versions of Joomla!</strong>. Selecting the Load Migration Script option enables support for the migration of older Joomla! 1.0.x version database dumps to a new Joomla! 1.5.x site. The required conversions are performed on-the-fly and the migration script file can be created on the older site by using the <code>com_migrator</code> component.<br /> For further information about the component and the migration procedure, please see the <a href="_QQ_"http://docs.joomla.org/Migrating_from_1.0.x_to_1.5_Stable"_QQ_" target="_QQ_"blank"_QQ_">Joomla! 1.5 Migration Guide</a>."
-INSTL_SITE_LOAD_SAMPLE_DESC6="You can upload uncompressed SQL script files, zip-packed script files and gz-packed script files. Packed files may contain only one SQL script file. If your file is too big to handle or causing memory and time limit errors, upload the uncompressed file into the /installation/sql/migration/ folder. Rename it <code>migrate.sql</code> and then tick the "_QQ_"I have already uploaded..."_QQ_" option.<br />"
-INSTL_SITE_LOAD_SAMPLE_DESC7="<strong>3. Clean Installation</strong>: If you wish to perform a clean installation, enter the site name, admin email and choose a password. Then proceed to the final step by clicking <em>Next</em>."
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Default sample data</strong> can be inserted. To do this, make sure the Default English (GB) Sample Data is displayed in the dropdown and click the Install Sample Data button."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Custom sample data</strong> can be inserted. To do this, choose an available sample data in the dropdown and click the Install Sample Data button."
+INSTL_SITE_LOAD_SAMPLE_DESC5="<strong>2a. A Joomla! 1.6.x compatible SQL script file</strong> can be uploaded from a localhost and executed on the site. This could be for installing localised sample data or restoring a Joomla! 1.5.x backup. The script should have the correct table prefixes, be in UTF-8 encoding and comply with the Joomla! 1.5.x database schema."
+INSTL_SITE_LOAD_SAMPLE_DESC6="<strong>2b. Migrate content from previous versions of Joomla!</strong>. Selecting the Load Migration Script option enables support for the migration of older Joomla! 1.0.x version database dumps to a new Joomla! 1.5.x site. The required conversions are performed on-the-fly and the migration script file can be created on the older site by using the <code>com_migrator</code> component.<br /> For further information about the component and the migration procedure, please see the <a href="_QQ_"http://docs.joomla.org/Migrating_from_1.0.x_to_1.5_Stable"_QQ_" target="_QQ_"blank"_QQ_">Joomla! 1.5 Migration Guide</a>."
+INSTL_SITE_LOAD_SAMPLE_DESC7="You can upload uncompressed SQL script files, zip-packed script files and gz-packed script files. Packed files may contain only one SQL script file. If your file is too big to handle or causing memory and time limit errors, upload the uncompressed file into the /installation/sql/migration/ folder. Rename it <code>migrate.sql</code> and then tick the "_QQ_"I have already uploaded..."_QQ_" option.<br />"
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>3. Clean Installation</strong>: If you wish to perform a clean installation, enter the site name, admin email and choose a password. Then proceed to the final step by clicking <em>Next</em>."
+INSTL_SITE_SAMPLE_LABEL="Sample Data set"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Install Sample Data"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Installing sample data is strongly recommended for beginners. This will install sample content that is included in the Joomla! installation package."
 INSTL_SITE_SAMPLE_LOADED="Sample Data Installed Successfully."
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
 
 ;Complete view
 INSTL_COMPLETE="Finish"
@@ -124,6 +127,7 @@ INSTL_DATABASE_PREFIX_INVALID_CHARS="The MySQL table prefix must start with a le
 INSTL_DATABASE_INVALID_NAME="MySQL versions previous to 5.1.6 may not contain periods or other "_QQ_"special"_QQ_" characters in the name. Your version is: %s"
 INSTL_DATABASE_NAME_INVALID_SPACES="MySQL database names and table names may not begin or end with spaces."
 INSTL_DATABASE_NAME_INVALID_CHAR="No MySQL identifier can contain a NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="File %s does not exist"
 
 ;controllers
 INSTL_COOKIES_NOT_ENABLED="Cookies do not appear to be enabled on your browser client. You will not be able to install the application with this feature disabled. Alternatively, there could also be a problem with the server's <strong>session.save_path</strong>. If this is the case, please consult your hosting provider if you don't know how to check or fix this yourself."
