@@ -32,6 +32,13 @@
 			field="admin_password"
 		/>
 
+		<field name="sample_file" type="sample" class="inputbox"
+			label="INSTL_SITE_SAMPLE_LABEL"
+			default="sample_data.sql"
+		/>
+
+		<field name="db_type" type="hidden" />
+
 		<field name="sample_installed" type="text" id="sample_installed" class="hidden"
 			label=""
 			default="0"
