@@ -30,6 +30,7 @@ $ -> Language fix or change
 23-Oct-2010 Jean-Marie Simonet
  # [#22928] Module edit - option to show/hide title in wrong position. Thanks Bill.
  $ Correcting module position desc string.
+ # [#22989] Implement a way to choose between sample data at install. Thanks Christophe.
  
 23-Oct-2010 Christophe Demko
  # [#22442] available module positions
